Project

General

Profile

Actions

Bug #19978

closed

rgw: 'gc list --include-all' command infinite loop the first 1000 items

Added by shasha lu almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20146: jewel: rgw: 'gc list --include-all' command infinite loop the first 1000 itemsResolvedWei-Chung ChengActions
Copied to rgw - Backport #20147: kraken: rgw: 'gc list --include-all' command infinite loop the first 1000 itemsResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley almost 7 years ago

  • Status changed from New to Pending Backport
Actions #2

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20146: jewel: rgw: 'gc list --include-all' command infinite loop the first 1000 items added
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20147: kraken: rgw: 'gc list --include-all' command infinite loop the first 1000 items added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Project changed from Ceph to rgw
  • Category deleted (22)
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF